--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="league-tab" data-league="NFL">NFL Streams</div>
             <div class="league-tab" data-league="NHL">NHL Streams</div>
             <div class="league-tab" data-league="MLS">MLS Streams</div>
-            <div class="league-tab" data-league="Soccer">Soccer</div>
+            <div class="league-tab" data-league="SOCCER">Soccer</div>
         </div>
     </header>
    <div class="discord-wrapper">
