--- a/index.html
+++ b/index.html
@@ -60,499 +60,210 @@
                     onkeyup="searchMatches()">
                 <div id="matches">
 
- <div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex8141591"
->
-  <div class="match-card">
-    <div class="match-league">
-      UEFA CONFERENCE LEAGUE
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141580">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Koper vs Željezničar Sarajevo
+       </div>
+        <div class="match-time">July 17, 2025 - 1:30 PM ET</div>
     </div>
-    <div class="match-title">
-Auda Kekava vs Larne
+</div>
+
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141580">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Neman Grodno vs Urartu
+        </div>
+        <div class="match-time">July 17, 2025 - 2:00 PM ET</div>
     </div>
-    <div class="match-time">July 16, 2025 - 12:00 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ArenaPremium2[Serbia]"
->
-  <div class="match-card">
-    <div class="match-league">
-NORWEGIAN ELITESERIEN
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141596">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Partizani Tirana vs Nõmme Kalju
+        </div>
+        <div class="match-time">July 17, 2025 - 2:00 PM ET</div>
     </div>
-    <div class="match-title">
-Fredrikstad vs Bodø/Glimt
-    </div>
-    <div class="match-time">July 16, 2025 - 12:00 PM ET</div>
-  </div>
 </div>
 
 
-<div
-  class="match-link"
-  data-league="WNBA"
-  data-frame="https://topembed.pw/channel/ex7878734"
->
-  <div class="match-card">
-    <div class="match-league">
-      WNBA
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141592">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Dynamo Brest vs Sutjeska
+        </div>
+        <div class="match-time">July 17, 2025 - 2:30 PM ET</div>
     </div>
-    <div class="match-title">
-Chicago Sky vs Atlanta Dream
-    </div>
-    <div class="match-time">July 16, 2025 - 12:00 PM ET</div>
-  </div>
 </div>
 
 
-<div
-  class="match-link"
-  data-league="WNBA"
-  data-frame="https://topembed.pw/channel/ex7878735"
->
-  <div class="match-card">
-    <div class="match-league">
-      WNBA
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141577">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Cliftonville vs St Josephs
+        </div>
+        <div class="match-time">July 17, 2025 - 2:45 PM ET</div>
     </div>
-    <div class="match-title">
-Minnesota Lynx vs Phoenix Mercury
-    </div>
-    <div class="match-time">July 16, 2025 - 1:00 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex8141495"
->
-  <div class="match-card">
-    <div class="match-league">
-UEFA CHAMPIONS LEAGUE
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141584">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+Víkingur Reykjavík vs Malisheva
+        </div>
+        <div class="match-time">July 17, 2025 - 2:45 PM ET</div>
     </div>
-    <div class="match-title">
-Dinamo Minsk vs Ludogorets Razgrad
-    </div>
-    <div class="match-time">July 16, 2025 - 2:45 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex8141503"
->
-  <div class="match-card">
-    <div class="match-league">
-UEFA CHAMPIONS LEAGUE
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8141597">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+KÍ Klaksvík vs SJK Seinajoki
+        </div>
+        <div class="match-time">July 17, 2025 - 2:45 PM ET</div>
     </div>
-    <div class="match-title">
-Linfield vs Shelbourne
-    </div>
-    <div class="match-time">July 16, 2025 - 2:45 PM ET</div>
-  </div>
 </div>
 
 
-<div
-  class="match-link"
-  data-league="WNBA"
-  data-frame="https://topembed.pw/channel/ex7878736"
->
-  <div class="match-card">
-    <div class="match-league">
-      WNBA
+<div class="match-link" data-league="SOCCER" data-frame="https://topembed.pw/channel/ex8136309">
+    <div class="match-card">
+        <div class="match-league">
+UEFA CONFERENCE LEAGUE
+        </div>
+        <div class="match-title">
+La Fiorita vs Vardar
+        </div>
+        <div class="match-time">July 17, 2025 - 3:00 PM ET</div>
     </div>
-    <div class="match-title">
-Seattle Storm vs Golden State Valkyries
+</div>
+
+<div class="match-link" data-league="https://topembed.pw/channel/FanDuelSportsDetroit[USA]" data-frame="https">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Miami Heat vs Detroit Pistons
+        </div>
+        <div class="match-time">July 17, 2025 - 4:00 PM ET</div>
     </div>
-    <div class="match-time">July 16, 2025 - 3:00 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825340"
->
-  <div class="match-card">
-    <div class="match-league">
-UEFA WOMENS EURO
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+New York Knicks vs Indiana Pacers
+        </div>
+        <div class="match-time">July 17, 2025 - 4:30 PM ET</div>
     </div>
-    <div class="match-title">
-Norway Women vs Italy Women
-    </div>
-    <div class="match-time">July 16, 2025 - 3:00 PM ET</div>
-  </div>
 </div>
 
 
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/ESPN2[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/SportsnetOne[Canada]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Memphis Grizzlies vs Atlanta Hawks
+        </div>
+        <div class="match-time">July 17, 2025 - 6:00 PM ET</div>
     </div>
-    <div class="match-title">
-Cleveland Cavaliers vs Sacramento Kings
-    </div>
-    <div class="match-time">July 16, 2025 - 3:30 PM ET</div>
-  </div>
 </div>
 
 
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/ex8203428"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/TSN2[Canada]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Charlotte Hornets vs San Antonio Spurs
+        </div>
+        <div class="match-time">July 17, 2025 - 7:00 PM ET</div>
     </div>
-    <div class="match-title">
-Minnesota Timberwolves vs Phoenix Suns
+</div>
+
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/SportsnetOne[Canada]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Portland Trail Blazers vs Houston Rockets
+        </div>
+        <div class="match-time">July 17, 2025 - 8:00 PM ET</div>
     </div>
-    <div class="match-time">July 16, 2025 - 5:00 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/ESPN2[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN[USA]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Los Angeles Lakers vs Boston Celtics
+        </div>
+        <div class="match-time">July 17, 2025 - 9:00 PM ET</div>
     </div>
-    <div class="match-title">
-Chicago Bulls vs Milwaukee Bucks
-    </div>
-    <div class="match-time">July 16, 2025 - 5:30 PM ET</div>
-  </div>
 </div>
 
 
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825340"
->
-  <div class="match-card">
-    <div class="match-league">
-BRAZILIAN SERIE A
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/SportsnetEast[Canada]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Toronto Raptors vs Golden State Warriors
+        </div>
+        <div class="match-time">July 17, 2025 - 10:00 PM ET</div>
     </div>
-    <div class="match-title">
-Palmeiras vs Mirassol
-    </div>
-    <div class="match-time">July 16, 2025 - 6:00 PM ET</div>
-  </div>
 </div>
 
 
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/beINSPORTSUSA[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-COPA SUDAMERICANA
+<div class="match-link" data-league="NBA" data-frame="https://topembed.pw/channel/ESPN2[USA]">
+    <div class="match-card">
+        <div class="match-league">
+            NBA
+        </div>
+        <div class="match-title">
+Los Angeles Clippers vs Denver Nuggets
+        </div>
+        <div class="match-time">July 17, 2025 - 11:00 PM ET</div>
     </div>
-    <div class="match-title">
-Bolívar vs Palestino
-    </div>
-    <div class="match-time">July 16, 2025 - 6:00 PM ET</div>
-  </div>
 </div>
 
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825341"
->
-  <div class="match-card">
-    <div class="match-league">
-BRAZILIAN SERIE A
-    </div>
-    <div class="match-title">
-Ceará vs Corinthians
-    </div>
-    <div class="match-time">July 16, 2025 - 6:30 PM ET</div>
-  </div>
-</div>
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825341"
->
-  <div class="match-card">
-    <div class="match-league">
-BRAZILIAN SERIE A
-    </div>
-    <div class="match-title">
-Santos vs Flamengo
-    </div>
-    <div class="match-time">July 16, 2025 - 6:30 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/YES[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
-    </div>
-    <div class="match-title">
-Brooklyn Nets vs Orlando Magic
-    </div>
-    <div class="match-time">July 16, 2025 - 7:30 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="WNBA"
-  data-frame="https://topembed.pw/channel/ex7878738"
->
-  <div class="match-card">
-    <div class="match-league">
-      WNBA
-    </div>
-    <div class="match-title">
-New York Liberty vs Indiana Fever
-    </div>
-    <div class="match-time">July 16, 2025 - 7:30 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="WNBA"
-  data-frame="https://topembed.pw/channel/ex7878737"
->
-  <div class="match-card">
-    <div class="match-league">
-      WNBA
-    </div>
-    <div class="match-title">
-Dallas Wings vs Las Vegas Aces
-    </div>
-    <div class="match-time">July 16, 2025 - 8:00 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/ESPN[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
-    </div>
-    <div class="match-title">
-Philadelphia 76ers vs Dallas Mavericks
-    </div>
-    <div class="match-time">July 16, 2025 - 8:00 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825341"
->
-  <div class="match-card">
-    <div class="match-league">
-BRAZILIAN SERIE A
-    </div>
-    <div class="match-title">
-Botafogo vs Vitória
-    </div>
-    <div class="match-time">July 16, 2025 - 8:30 PM ET</div>
-  </div>
-</div>
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex7825341"
->
-  <div class="match-card">
-    <div class="match-league">
-COPA SUDAMERICANA
-    </div>
-    <div class="match-title">
-Bragantino vs São Paulo
-    </div>
-    <div class="match-time">July 16, 2025 - 8:30 PM ET</div>
-  </div>
-</div>
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/beINSPORTSUSA[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-COPA SUDAMERICANA
-    </div>
-    <div class="match-title">
-Alianza Lima vs Grêmio
-    </div>
-    <div class="match-time">July 16, 2025 - 8:30 PM ET</div>
-  </div>
-</div>
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ESPN2[Argentina]"
->
-  <div class="match-card">
-    <div class="match-league">
-      COPA SUDAMERICANA
-    </div>
-    <div class="match-title">
-San Antonio Bulo Bulo vs Once Caldas
-    </div>
-    <div class="match-time">July 16, 2025 - 8:30 PM ET</div>
-  </div>
-</div>
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex8211357"
->
-  <div class="match-card">
-    <div class="match-league">
-      SOCCER
-    </div>
-    <div class="match-title">
-CF America vs Tijuana
-    </div>
-    <div class="match-time">July 16, 2025 - 9:00 PM ET</div>
-  </div>
-</div>
-
-
-
-
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/SportsnetOne[Canada]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
-    </div>
-    <div class="match-title">
-Oklahoma City Thunder vs New Orleans Pelicans
-    </div>
-    <div class="match-time">July 16, 2025 - 9:30 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="NBA"
-  data-frame="https://topembed.pw/channel/ESPN[USA]"
->
-  <div class="match-card">
-    <div class="match-league">
-      NBA
-    </div>
-    <div class="match-title">
-Utah Jazz vs Washington Wizards
-    </div>
-    <div class="match-time">July 16, 2025 - 10:00 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https"
->
-  <div class="match-card">
-    <div class="match-league">
-      SOCCER
-    </div>
-    <div class="match-title">
-      Kairat Almaty vs Olimpija Ljubljana
-    </div>
-    <div class="match-time">July 16, 2025 - 11:00 PM ET</div>
-  </div>
-</div>
-
-
-
-<div
-  class="match-link"
-  data-league="SOCCER"
-  data-frame="https://topembed.pw/channel/ex8211364"
->
-  <div class="match-card">
-    <div class="match-league">
-MEXICAN PRIMERA LEAGUE
-    </div>
-    <div class="match-title">
-Santos Laguna vs Toluca
-    </div>
-    <div class="match-time">July 16, 2025 - 11:05 PM ET</div>
-  </div>
-</div>
                 </div>
             </section>
             <div class="sidebar">
